--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
+    -webkit-tap-highlight-color: transparent;
 }
 
 // src/styles/main.scss
@@ -16,22 +17,106 @@ body {
 }
 
 ::selection{
-    background-color: #ccc3;
-    color: #000;
+    background-color: #3338;
+    color: #eee;
 }
 
 // Import other component styles
 @import '../components/SKUForm';
 @import '../components/SKULabel';
 
-.app{
+::-webkit-scrollbar{
+    width: 5px;
+    height: 0px;
+}
+
+::-webkit-scrollbar-button{
+    height: 10px;
+}
+
+::-webkit-scrollbar-thumb{
+    background-color: #fff2;
+    border: 1px solid #fff2;
+    border-radius: 10px;
+    transition: all 0.5s ease;
+
+    &:hover{
+        background-color: #fff4;
+    }
+}
+
+#root{
+    // background-image: linear-gradient(45deg, rgb(53, 45, 161), rgb(125, 44, 145));
     height: 100%;
     width: 100%;
     position: fixed;
-    top: 0;
-    left: 0;
-    background-image: linear-gradient(45deg, rgb(53, 45, 161), rgb(125, 44, 145));
+    padding: 0 20px;
+    // animation: gradientAnimation 3s ease-in-out infinite;
+
+    // @keyframes gradientAnimation {
+    //     0% {
+    //       background-image: linear-gradient(45deg, rgb(53, 45, 161), rgb(125, 44, 145));
+    //     }
+    //     50% {
+    //       background-image: linear-gradient(90deg, rgb(53, 45, 161), rgb(125, 44, 145));
+    //     }
+    //     100% {
+    //       background-image: linear-gradient(135deg, rgb(53, 45, 161), rgb(125, 44, 145));
+    //     }
+    // }
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    &::before {
+        content: '';
+        position: absolute;
+        // top: 0;
+        // left: 0;
+        width: 150vh;
+        height: 150vh;
+        min-width: 150vw;
+        min-height: 150vw;
+        z-index: -1;
+        background-image: linear-gradient(45deg, rgb(53, 45, 161), rgb(125, 44, 145));
+        animation: rotationAnimation 10s infinite linear;
+        // animation: gradientAnimation 10s infinite linear;
+      }
+
+      @keyframes gradientAnimation {
+        0% {
+          background-size: 100% 100%;
+          background-position: 0% 0%;
+        }
+        50% {
+          background-size: 200% 200%;
+          background-position: 100% 100%;
+        }
+        100% {
+          background-size: 100% 100%;
+          background-position: 0% 0%;
+        }
+      }
+      
+      @keyframes rotationAnimation {
+        0% {
+          transform: rotate(0deg);
+        }
+        100% {
+          transform: rotate(360deg);
+        }
+      }
+
+    @media screen and (max-width: 700px) {
+        padding: 0 10px;
+    }
+}
+
+.app{
+    height: 100%;
+    width: 100%;
     color: #fff;
+    // backdrop-filter: blur(10px);
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -40,12 +125,47 @@ body {
     padding: 50px 5vw;
     padding-top: 70px;
     text-align: center;
+    overflow-y: scroll;
+    overflow-x: hidden;
 
     h1{
-        font-size: 40px;
+        font-size: 30px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: left;
+        gap: 20px;
+        margin-bottom: 10px;
+
+        svg{
+            width: 60px;
+            height: 60px;
+            padding: 10px;
+            border-radius: 1000px;
+            border: 3px solid #fff;
+            border-right: 1px solid #fff3;
+            border-left: 1px solid #fff3;
+            border-bottom: 1px solid #fff3;
+            background-color: #fff2;
+        }
 
         @media screen and (max-width: 900px) {
-            font-size: 30px;
+            font-size: 24px;
+
+            svg{
+                width: 50px;
+                height: 50px;
+            }
+        }
+
+        @media screen and (max-width: 500px) {
+            font-size: 22px;
+            gap: 15px;
+
+            svg{
+                width: 40px;
+                height: 40px;
+            }
         }
     }
 
@@ -57,12 +177,11 @@ body {
         gap: 10px;
         background-color: #fff2;
         border: 1px solid #fff2;
-        backdrop-filter: blur(10px);
         box-shadow: 0px 0px 10px #0001;
         align-items: center;
 
         label{
-            font-size: 19px;
+            font-size: 25px;
             font-weight: 600;
         }
 
@@ -75,27 +194,22 @@ body {
             outline: none;
             transition: all 0.5s ease;
             color: #fff;
-            // backdrop-filter: blur(10px);
+            font-weight: 600;
+            font-size: 18px;
+            width: 100%;
+            backdrop-filter: blur(10px);
+            z-index: 2;
 
             &::placeholder{
                 color: #ccc;
             }
-            
-            &:hover, &:focus{
-                color: #000;
-                background-color: #fff8;
-                
-                &::placeholder{
-                    color: #666;
-                }
-            }
         }
 
         button{
-            padding: 10px 15px;
-            background-color: purple;
+            padding: 10px 25px;
+            background-color: rgb(58, 27, 112);
             background-size: 200%;
-            background-image: linear-gradient(90deg,#0000, #000a, #0000, #000a);
+            background-image: linear-gradient(90deg,#0000, #000a, #0000);
             background-position: left;
             // max-width: 150px;
             color: #fff;
@@ -103,15 +217,121 @@ body {
             border: none;
             box-shadow: 0px 0px 10px #0003;
             font-weight: 600;
-            font-size: 16px;
+            font-size: 22px;
             border-radius: 10px;
             cursor: pointer;
-            transition: all 0.5s ease;
+            transition: all 0.5s ease, background-position 5s ease;
+            height: 45px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+            overflow: hidden;
+
+            &::before{
+                content: "";
+                position: absolute;
+                width: 30px;
+                height: 300%;
+                background-color: #fff2;
+                transform: rotate(40deg);
+                filter: blur(20px);
+                opacity: 0.1;
+                left: -90px;
+                transition: all 2s ease;
+            }
+
+            &:disabled{
+                opacity: 0;
+                filter: blur(10px);
+                margin-top: -40px;
+                pointer-events: none;
+                visibility: hidden;
+            }
 
             &:hover, &:focus{
                 background-position: right;
                 transform: scale(1.05);
             }
+
+            &:hover{
+                &::before{
+                    transition: all 5s ease, opacity 0.5s ease;
+                    opacity: 1;
+                    left: calc(100% + 10px);
+                }
+            }
         }
+    }
+}
+
+.loader{
+    position: fixed;
+    z-index: 22;
+    width: 100%;
+    height: 100%;
+    z-index: 99;
+    top: 0;
+    left: 0;
+    background-color: #0006;
+    backdrop-filter: blur(20px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 30px;
+    
+    .circle--comp{
+        width: 50px;
+        height: 50px;
+        border-radius: 1000px;
+        border: 6px solid #fff3;
+        border-right: 6px solid #fff;
+        animation: spin 1s linear forwards infinite;
+
+        @keyframes spin {
+            0%{
+                transform: rotate(-360deg);
+            }
+        }
+    }
+    
+    p{
+        color: #fffa;
+        animation: load-in 3s ease forwards;
+        animation-delay: 2s;
+        opacity: 0;
+        font-size: 14px;
+        transform: translateY(100px);
+    }
+
+    @keyframes load-in {
+        0%{
+            opacity: 0;
+            transform: translateY(30px);
+        }
+
+        100%{
+            opacity: 1;
+            transform: translateY(0px);
+        }
+    }
+}
+
+.error{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 6px;
+    font-size: 15px;
+
+    svg{
+        color: #fff;
+        background-color: red;
+        border-radius: 100px;
+        padding: 4px;
+        scale: 1.5;
+        display: none;
+        box-shadow: 0px 0px 20px #0009;
     }
 }
