--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -438,28 +438,48 @@ body {
             }
         }
     }
+
+    // display: none;
 }
 
 #skuLabel{
     position: fixed;
     top: 0;
     left: 0;
-    height: 100%;
+    // height: 100%;
     z-index: -10;
     // z-index: 30;
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(8, 1fr);
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
     // opacity: 0;
     pointer-events: none;
     // visibility: hidden;
+    gap: 5px;
+
+    .label{
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+        max-width: 100%;
+        min-width: 100%;
+        height: 100%;
+        overflow: visible;
+        svg{
+            width: 100%;
+        }
+    }
     
     .name, .new{
-        text-align: center;
+        text-align: left;
         // width: 100%;
-        margin-top: 20px;
-        font-size: 18px;
+        // margin-top: -10px;
+        font-size: 9px;
+        min-width: max-content;
         color: #000;
         font-weight: 500;
         margin-left: 5px;
@@ -467,7 +487,7 @@ body {
 
     .new{
         margin-top: 5px;
-        font-size: 23px;
+        font-size: 14px;
     }
 }
 
